# calendar_widget

./: .pypirc  Calendar_Widget.py  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
calendar_widget/: __init__.py  calendar_widget.py
src/calendar_widget/: Calendar_Widget.py  __init__.py
src/calendar_widget.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: created_img_embbed.py  img.txt  import_test.py  test.py
