[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar_widget"
version = "1.0.5"
authors = [
  { name="Spartanlasergun", email="bns360@live.com" },
]
description = "Calendar widget for use with python tkinter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/Spartanlasergun/calendar_widget"
"Bug Tracker" = "https://github.com/Spartanlasergun/calendar_widget/issues"